[tool.poetry]
name = "pdf-to-tts"
version = "0.1.0"
description = ""
authors = ["cheese <seojeee@gmail.com>"]
readme = "README.md"
packages = [{include = "pdf_to_tts"}]

[tool.poetry.dependencies]
python = "^3.10"
pyttsx3 = "^2.90"
pypdf2 = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
